force-app/main/default/objects/CLQ_ProgramTriggerHandler__mdt/CLQ_ProgramTriggerHandler__mdt.object-meta.xml
<CustomObject>
    <label>CLQ_ProgramTriggerHandler</label>
    <pluralLabel>CLQ_ProgramTriggerHandlers</pluralLabel>
</CustomObject>