force-app/main/default/objects/CLQ_ProgramTriggerHandler__mdt/fields/failProgTransStatus__c.field-meta.xml
<CustomField>
    <fullName>failProgTransStatus__c</fullName>
    <label>failProgTransStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>