force-app/main/default/objects/CLQ_ProgramTriggerHandler__mdt/fields/licInspectionsStatusOpen__c.field-meta.xml
<CustomField>
    <fullName>licInspectionsStatusOpen__c</fullName>
    <label>licInspectionsStatusOpen</label>
    <length>100</length>
    <type>Text</type>
</CustomField>