force-app/main/default/objects/CLQ_ProgramTriggerHandler__mdt/fields/licInspectionsStatusPending__c.field-meta.xml
<CustomField>
    <fullName>licInspectionsStatusPending__c</fullName>
    <label>licInspectionsStatusPending</label>
    <length>100</length>
    <type>Text</type>
</CustomField>