force-app/main/default/objects/CLQ_ProgramTriggerHandler__mdt/fields/openProgAndTransStatus__c.field-meta.xml
<CustomField>
    <fullName>openProgAndTransStatus__c</fullName>
    <label>openProgAndTransStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>