force-app/main/default/objects/CLQ_ProgramTriggerHandler__mdt/fields/pendingProgAndTransStatus__c.field-meta.xml
<CustomField>
    <fullName>pendingProgAndTransStatus__c</fullName>
    <label>pendingProgAndTransStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>