force-app/main/default/objects/CLQ_ProgramTriggerHandler__mdt/fields/progStatusList__c.field-meta.xml
<CustomField>
    <fullName>progStatusList__c</fullName>
    <label>progStatusList</label>
    <length>255</length>
    <type>Text</type>
</CustomField>